--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Girassol&display=swap");
-@import 'https://fonts.googleapis.com/css?family=Roboto+Mono:100';
+@import "https://fonts.googleapis.com/css?family=Roboto+Mono:100";
 body {
   display: flex;
   justify-content: center;
@@ -13,8 +12,7 @@ body {
   font-weight: 100;
   font-size: 28px;
   color: #fafafa;
-  /* font-family: 'Girassol', cursive; */
-  font-family: 'Roboto Mono', monospace;
+  font-family: "Roboto Mono", monospace;
   text-align: center;
 }
 .dud {
@@ -134,4 +132,160 @@ body {
 }
 .star-field .layer:nth-child(3) {
   animation: sf-fly-by-3 5s linear infinite;
+}
+
+/*KARAOKE EFFECT */
+
+@-webkit-keyframes pulse {
+  0% {
+    color: #aaa;
+  }
+  50% {
+    color: #fff;
+  }
+  100% {
+    color: #aaa;
+  }
+}
+@-moz-keyframes pulse {
+  0% {
+    color: #aaa;
+  }
+  50% {
+    color: #fff;
+  }
+  100% {
+    color: #aaa;
+  }
+}
+@keyframes pulse {
+  0% {
+    color: #aaa;
+  }
+  50% {
+    color: #fff;
+  }
+  100% {
+    color: #aaa;
+  }
+}
+.karaoke-caption {
+  padding-top: 30px;
+  text-align: center;
+  font-size: 20pt;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight: 300;
+}
+.karaoke-caption span {
+  color: #555;
+}
+.karaoke-caption span.highlighted {
+  color: #999;
+  -webkit-animation: pulse 0.3s ease-out;
+  -moz-animation: pulse 0.3s ease-out;
+  animation: pulse 0.3s ease-out;
+}
+
+/* BOTON FUTURISTA  */
+
+button,
+button::after {
+  margin-top: 20px;
+  padding: 16px 20px;
+  font-size: 18px;
+  background: linear-gradient(45deg, transparent 5%, #4903ca 5%);
+  border: 0;
+  color: #fff;
+  letter-spacing: 3px;
+  line-height: 1;
+  box-shadow: 6px 0px 0px #00e6f6;
+  outline: transparent;
+  position: relative;
+}
+
+button::after {
+  --slice-0: inset(50% 50% 50% 50%);
+  --slice-1: inset(80% -6px 0 0);
+  --slice-2: inset(50% -6px 30% 0);
+  --slice-3: inset(10% -6px 85% 0);
+  --slice-4: inset(40% -6px 43% 0);
+  --slice-5: inset(80% -6px 5% 0);
+  content: "Despierta!";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    45deg,
+    transparent 3%,
+    #00e6f6 3%,
+    #00e6f6 5%,
+    #ff013c 5%
+  );
+  text-shadow: -3px -3px 0px #f8f005, 3px 3px 0px #00e6f6;
+  clip-path: var(--slice-0);
+}
+
+button:hover::after {
+  animation: 1s glitch;
+  animation-timing-function: steps(2, end);
+}
+
+@keyframes glitch {
+  0% {
+    clip-path: var(--slice-1);
+    transform: translate(-20px, -10px);
+  }
+
+  10% {
+    clip-path: var(--slice-3);
+    transform: translate(10px, 10px);
+  }
+
+  20% {
+    clip-path: var(--slice-1);
+    transform: translate(-10px, 10px);
+  }
+
+  30% {
+    clip-path: var(--slice-3);
+    transform: translate(0px, 5px);
+  }
+
+  40% {
+    clip-path: var(--slice-2);
+    transform: translate(-5px, 0px);
+  }
+
+  50% {
+    clip-path: var(--slice-3);
+    transform: translate(5px, 0px);
+  }
+
+  60% {
+    clip-path: var(--slice-4);
+    transform: translate(5px, 10px);
+  }
+
+  70% {
+    clip-path: var(--slice-2);
+    transform: translate(-10px, 10px);
+  }
+
+  80% {
+    clip-path: var(--slice-5);
+    transform: translate(20px, -10px);
+  }
+
+  90% {
+    clip-path: var(--slice-1);
+    transform: translate(-10px, 0px);
+  }
+
+  100% {
+    clip-path: var(--slice-1);
+    transform: translate(0);
+  }
 }
